harmonized ansible.cfg files

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,10 @@
-[default]
+[defaults]
+hostfile = inventory
 roles_path = roles
+
+# With EC2, don't want to check host keys
+remote_user = ubuntu
+host_key_checking = False
+
+[ssh_connection]
+control_path = %(directory)s/%%h-%%r
